Fix z-indexing on /documentation

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -291,7 +291,7 @@ $p-small-lh-diff: map-get($line-heights, default-text) - map-get($line-heights, 
 .p-featured {
   gap: 0;
 
-  &__item { 
+  &__item {
     cursor: pointer;
     margin-right: 1px;
     padding: 0 1rem 1rem;
@@ -345,4 +345,16 @@ $p-small-lh-diff: map-get($line-heights, default-text) - map-get($line-heights, 
 .p-inline-list.is-inlined-with-h2 {
   display: inline-block;
   margin: 1.5rem 0 0 1rem;
+}
+
+// Makes side-navigation fit with the custom top-navigation of c.com
+.p-side-navigation {
+  &--raw-html.is-sticky {
+    top: 4.5rem;
+    z-index: 1;
+  }
+
+  &__drawer {
+  top: 48px;
+  }
 }
